--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
     <h5>Front-end Developer in Los Angeles, California</h5>
 
     <div class="plants">
-      <img src="/images/Plants.png" alt="Plant-project" class="plants" />
+      <img src="/images/Plants.png" alt="Plant-project" class="plantsimg" />
       This project was personally built on visual studios with an in dept on
       succulents.
     </div>
@@ -28,7 +28,11 @@
       This project was created using API's to target your exact location to give
       accurate weather in your area along with a seven week long future
       forecast.
-      <img src="/images/Weatherapp.png" alt="weather-app" class="weatherapp" />
+      <img
+        src="/images/Weatherapp.png"
+        alt="weather-app"
+        class="weatherappimg"
+      />
     </div>
 
     <div class="portfolio">
