--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@
 
     <div class="plants">
       <img src="/images/Plants.png" alt="Plant-project" class="plantsimg" />
+      <p class="d-none d-md-block" alt="succulentproject">Succulent project</p>
       This project was personally built on visual studios with an in dept on
       succulents.
     </div>
